feat: some updates
